--- a/Website/WebClient/public/index.html
+++ b/Website/WebClient/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>LIARBIRDS</title>
+    <title>Liarbirds by Silkcube</title>
+    <meta property="og:title" content="Liarbirds">
+    <meta property="og:image" content="./front.jpg">
+    <link rel="shortcut icon" type="image/png" href ="./favicon.png"/>  
   </head>
   <body>
     <div id="root"></div>
