--- a/Website/WebClient/public/index.html
+++ b/Website/WebClient/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Liarbirds by Silkcube</title>
-    <meta property="og:title" content="Liarbirds">
+    <meta property="og:title" content="Liarbirds by Silkcube">
     <meta property="og:image" content="./front.jpg">
     <link rel="shortcut icon" type="image/png" href ="./favicon.png"/>  
   </head>
